package switchtwentytwenty.project.Category;

import switchtwentytwenty.project.ID;
import switchtwentytwenty.project.ValueObject;

public class CategoryID implements ID, ValueObject {
    private int categoryID;

    public CategoryID() {
        this.categoryID = categoryID;
    }
}
