package switchtwentytwenty.project.Person;

public class Person {


}
